<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">采集终端运维系统</string>
    <string name="app_list_header_refresh_down">下拉刷新</string>
    <string name="app_list_header_refreshing">正在刷新</string>
    <string name="app_list_header_refresh_up">松开刷新</string>
    <string name="app_list_header_refresh_last_update">上次更新于:%s</string>
    <string name="app_list_footer_more">更多</string>
    <string name="app_list_footer_loading">正在加载</string>
    <string name="app_loading">请稍候，正在拉取数据....</string>
    <string name="app_loading_none">未找到数据.</string>
    <string name="app_loading_fail">数据加载失败，请稍后再试.</string>
    <string name="app_loading_fail_web">网页加载失败，请稍后再试.</string>
    <string name="app_refresh">刷新</string>
    <string name="app_share">分享</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="nologon_content">您还未登录\n请先登录！</string>
    <string name="logon_button">登录</string>
    <string name="dummy_button">切换账号</string>
    <string name="dialog_update_title">更新</string>
    <string name="dialog_update_msg">发现新版本，版本号：</string>
    <string name="dialog_update_msg2">\n是否立即更新?</string>
    <string name="dialog_update_btnupdate">更新</string>
    <string name="dialog_update_btnnext">下次再说</string>
    <string name="dialog_downloading_msg">正在下载更新。。。</string>
    <string name="dialog_alert_title">警告</string>
    <string name="dialog_downfailed_btndown">重新下载</string>
    <string name="dialog_downfailed_btnnext">以后再说</string>
    <string name="dialog_downfailed_btnrep">重试</string>
    <string name="dialog_error_title">错误</string>
    <string name="dialog_downfailed_msg">下载更新失败，是否重试？</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">设置</string>
    <string name="menu_ljgh">导航</string>
    <string name="title_activity_dyj">DyjActivity</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_index">个人中心</string>
    <string name="tab_1">任务池</string>
    <string name="tab_2">我的任务</string>
    <string name="tab_3">任务评价</string>
    <string name="title_activity_rwgg">未下载任务</string>
    <string name="title_activity_tab_map">地图</string>
    <string name="title_activity_my_rw_tab">已下载任务</string>
    <string name="title_activity_put_rw_tab">提交任务</string>
    <string name="title_activity_ls_rw_tab">已提交任务</string>
    <string name="title_activity_message_tab">通知公告栏</string>
    <string name="title_nosubmit">部门未提交:</string>
    <string name="title_nohg">部门不合格:</string>
    <string name="title_activity_get_lbs_tab">获取位置</string>
    <string name="title_activity_get_wcqk_tab">完成情况</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_get_zcbh_tab">新资产编号</string>
    <string name="title_activity_account">帐号管理</string>
    <string name="text_has_rwda">返工任务</string>
    <string name="about">关于</string>
    <string name="actionbar_activity_not_found">打开窗口失败...</string>
    <string name="title_activity_get_seach_key_for_rwgg_tab">搜索</string>
    <string name="title_activity_list_message_tab">通知</string>
    <string name="title_activity_disp_message_tab">通知详情</string>
    <string name="title_activity_ljgh_tab">导航</string>

</resources>