<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/corner"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/line_rwgg"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/bg_pop_item"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="right" >

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="right|center_vertical"
                        android:src="@drawable/message" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/title_activity_rwgg" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#817F80" >
            </View>

            <LinearLayout
                android:id="@+id/line_myrw"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/bg_pop_item"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="right" >

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="right|center_vertical"
                        android:src="@drawable/start" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/title_activity_my_rw_tab" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#817F80" >
            </View>

            <LinearLayout
                android:id="@+id/line_lsrw"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/bg_pop_item"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="right" >

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="right|center_vertical"
                        android:src="@drawable/history" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/title_activity_ls_rw_tab" />
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#817F80" >
            </View>

            <LinearLayout
                android:id="@+id/line_message"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/bg_pop_item"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="right" >

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="right|center_vertical"
                        android:src="@drawable/bag" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/title_activity_message_tab" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="40dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/title_nosubmit" />

                <com.dyj.widget.BadgeView
                    android:id="@+id/badge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:text="-" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginLeft="5dp"
                    android:text="@string/title_nohg" />
                 <com.dyj.widget.BadgeView
                    android:id="@+id/badge1"
                    android:layout_marginLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="-" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>